test/files/neg/t6436.check
t6436.scala:8: error: type mismatch;
 found   : StringContext
 required: ?{def q: ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method foo1 in object quasiquotes of type (ctx: StringContext)AnyRef{def q: Nothing}
 and method foo2 in object quasiquotes of type (ctx: StringContext)AnyRef{def q: Nothing}
 are possible conversion functions from StringContext to ?{def q: ?}
  println(q"a")
          ^
one error found
